# work-factory

./: .gitignore  ANALYSIS_INDEX.md  ANALYSIS_SUMMARY.txt  BATCHING_GUIDE.md  BATCHING_SUMMARY.md  BOTTLENECK_SUMMARY.md  CODE_REFERENCE.md  Cargo.toml  DELIVERABLES.md  DOCKER_DEPLOYMENT.md  Dockerfile.api  Dockerfile.frontend  Dockerfile.worker  EXECUTIVE_SUMMARY.md  NETWORK_ANALYSIS.md  NETWORK_OPTIMIZATION_GUIDE.md  NETWORK_PERFORMANCE_TUNING.md  QUICK_START.md  README.md  TUNING_GUIDE.md  docker-compose.server.yml  docker-compose.worker.yml  docker-compose.yml  justfile  nginx.conf  test_batching.sh
benchmark/: Cargo.toml
benchmark/src/: large.rs  main.rs  scaling.rs  scaling_test.rs  sustained.rs
crates/api-service/: Cargo.toml
crates/api-service/src/: main.rs
crates/frontend-service/: Cargo.toml
crates/frontend-service/src/: main.rs
crates/frontend-service/templates/: error.html  index.html  result.html
crates/job-types/: Cargo.toml
crates/job-types/src/: lib.rs
crates/worker-service/: Cargo.toml
crates/worker-service/src/: main.rs
