[workspace]
resolver = "2"
members = [
    "crates/job-types",
    "crates/api-service",
    "crates/worker-service",
    "crates/frontend-service",
]

[workspace.dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0.95"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
