[package]
name = "api-service"
version = "0.1.0"
edition = "2021"

[dependencies]
job-types = { path = "../job-types" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Web framework
axum = "0.8.6"

# Faktory client
faktory = "0.13.1"

# Connection pooling
deadpool = "0.12.1"
