[package]
name = "worker-service"
version = "0.1.0"
edition = "2021"

[dependencies]
job-types = { path = "../job-types" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Faktory worker
faktory = "0.13.1"
